[gd_scene load_steps=52 format=4 uid="uid://03yjnu1xbf3w"]

[ext_resource type="Script" uid="uid://bqlvdwdmdktx5" path="res://scripts/mainnode.gd" id="1_112p8"]
[ext_resource type="Texture2D" uid="uid://d3fejlid8pirv" path="res://textures/background.png" id="2_0i6v8"]
[ext_resource type="AudioStream" uid="uid://lab3gdg5we3c" path="res://да_не_психопомп_я_блять.mp3" id="3_dyurn"]
[ext_resource type="Texture2D" uid="uid://dkk8erwr4bbtp" path="res://textures/all128.png" id="3_qn3nj"]
[ext_resource type="Texture2D" uid="uid://bv0wm47scu5c" path="res://textures/gem64.png" id="4_qn3nj"]
[ext_resource type="Texture2D" path="res://textures/70x70.png" id="8_0i6v8"]
[ext_resource type="PackedScene" uid="uid://dxca46vv61m1n" path="res://scene/enemy.tscn" id="8_l6pdb"]
[ext_resource type="PackedScene" uid="uid://c2ssrgbfnk2il" path="res://scene/hp.tscn" id="9_r657h"]
[ext_resource type="Texture2D" uid="uid://cuwktx2wetkxp" path="res://textures/chevron_big_left_white.png" id="9_wt6go"]
[ext_resource type="FontFile" uid="uid://bk3kqlj53r8i7" path="res://fonts/InterTight-SemiBold.ttf" id="10_jfkdj"]
[ext_resource type="FontFile" uid="uid://bknomlt0rqiqy" path="res://fonts/InterTight-Medium.ttf" id="11_wt6go"]
[ext_resource type="PackedScene" uid="uid://dasftqpbgksix" path="res://scene/playerr.tscn" id="12_436f3"]
[ext_resource type="Texture2D" uid="uid://cg4ryqmx2fb4f" path="res://textures/Sprite-1213-Sheet.png" id="13_436f3"]

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_dyurn"]
load_path = "res://.godot/imported/Group 203.png-a0c2c9121271a5d0ed840cb4ac29f109.ctex"

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6lh7w"]
bg_color = Color(0.6, 0.6, 0.6, 0)
border_blend = true

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1hbs0"]
bg_color = Color(0.6, 0.6, 0.6, 0)
border_blend = true

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7x8fr"]
bg_color = Color(0.6, 0.6, 0.6, 0)
border_blend = true

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2y2sp"]
bg_color = Color(0.6, 0.6, 0.6, 0)
border_blend = true

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rsdyk"]
bg_color = Color(0.6, 0.6, 0.6, 0)
border_blend = true

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tp5mi"]
bg_color = Color(0.6, 0.6, 0.6, 0)
border_blend = true

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_l6pdb"]
texture = ExtResource("3_qn3nj")
texture_region_size = Vector2i(128, 128)
1:9/0 = 0
1:9/0/texture_origin = Vector2i(0, -15)
4:9/0 = 0
4:9/0/texture_origin = Vector2i(0, -15)
0:9/0 = 0
0:9/0/texture_origin = Vector2i(0, -15)
2:9/0 = 0
2:9/0/texture_origin = Vector2i(0, -15)
3:9/0 = 0
3:9/0/texture_origin = Vector2i(0, -15)
5:9/0 = 0
5:9/0/texture_origin = Vector2i(0, -21)

[sub_resource type="TileSet" id="TileSet_l6pdb"]
tile_shape = 1
tile_layout = 5
tile_size = Vector2i(128, 96)
occlusion_layer_0/light_mask = 1
sources/0 = SubResource("TileSetAtlasSource_l6pdb")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_cmsyx"]
texture = ExtResource("3_qn3nj")
texture_region_size = Vector2i(128, 128)
0:0/animation_speed = 10.0
0:0/animation_frame_0/duration = 1.0
0:0/animation_frame_1/duration = 1.0
0:0/animation_frame_2/duration = 1.0
0:0/animation_frame_3/duration = 1.0
0:0/animation_frame_4/duration = 1.0
0:0/animation_frame_5/duration = 1.0
0:0/animation_frame_6/duration = 1.0
0:0/animation_frame_7/duration = 1.0
0:0/animation_frame_8/duration = 1.0
0:0/animation_frame_9/duration = 1.0
0:0/animation_frame_10/duration = 1.0
0:0/animation_frame_11/duration = 1.0
0:0/0 = 0
0:10/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_r657h"]
texture = ExtResource("4_qn3nj")
texture_region_size = Vector2i(64, 64)
0:0/animation_speed = 1.5
0:0/animation_frame_0/duration = 1.0
0:0/animation_frame_1/duration = 1.0
0:0/0 = 0

[sub_resource type="TileSet" id="TileSet_feppd"]
tile_shape = 1
tile_layout = 5
tile_size = Vector2i(128, 96)
sources/0 = SubResource("TileSetAtlasSource_cmsyx")
sources/1 = SubResource("TileSetAtlasSource_r657h")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_436f3"]
texture = ExtResource("3_qn3nj")
texture_region_size = Vector2i(128, 128)
0:13/0 = 0
0:13/0/texture_origin = Vector2i(0, -15)
0:14/0 = 0
0:14/0/texture_origin = Vector2i(0, -15)
0:16/0 = 0
0:16/0/texture_origin = Vector2i(0, -15)
1:13/animation_speed = 3.0
1:13/animation_frame_0/duration = 1.0
1:13/animation_frame_1/duration = 1.0
1:13/animation_frame_2/duration = 1.0
1:13/animation_frame_3/duration = 1.0
1:13/0 = 0
1:13/0/texture_origin = Vector2i(0, -15)
1:14/animation_speed = 3.0
1:14/animation_frame_0/duration = 1.0
1:14/animation_frame_1/duration = 1.0
1:14/animation_frame_2/duration = 1.0
1:14/animation_frame_3/duration = 1.0
1:14/0 = 0
1:14/0/texture_origin = Vector2i(0, -15)
1:16/animation_speed = 3.0
1:16/animation_frame_0/duration = 1.0
1:16/animation_frame_1/duration = 1.0
1:16/animation_frame_2/duration = 1.0
1:16/animation_frame_3/duration = 1.0
1:16/0 = 0
1:16/0/texture_origin = Vector2i(0, -15)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_6lh7w"]
texture = ExtResource("3_qn3nj")
texture_region_size = Vector2i(128, 128)
4:12/0 = 0
0:17/0 = 0
1:17/0 = 0
2:17/0 = 0
3:17/0 = 0
4:17/0 = 0
5:17/0 = 0
0:18/0 = 0
1:18/0 = 0
2:18/0 = 0
3:18/0 = 0
4:18/0 = 0
0:19/0 = 0
1:19/0 = 0
2:19/0 = 0
3:19/0 = 0
4:19/0 = 0
0:20/0 = 0
1:20/0 = 0
2:20/0 = 0
3:20/0 = 0
4:20/0 = 0
0:21/0 = 0
1:21/0 = 0
2:21/0 = 0
3:21/0 = 0
4:21/0 = 0

[sub_resource type="TileSet" id="TileSet_bcos8"]
tile_shape = 1
tile_layout = 5
tile_size = Vector2i(128, 96)
sources/0 = SubResource("TileSetAtlasSource_436f3")
sources/1 = SubResource("TileSetAtlasSource_6lh7w")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_dyurn"]
bg_color = Color(0, 0, 0, 0.5882353)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(1, 0, 0.46666667, 1)
corner_radius_top_left = 24
corner_radius_top_right = 24
corner_radius_bottom_right = 24
corner_radius_bottom_left = 24
expand_margin_left = 40.0
expand_margin_top = 40.0
expand_margin_right = 40.0
expand_margin_bottom = 40.0

[sub_resource type="Theme" id="Theme_6lh7w"]

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_1hbs0"]
blend_mode = 4

[sub_resource type="Theme" id="Theme_7x8fr"]

[sub_resource type="LabelSettings" id="LabelSettings_2y2sp"]
font = ExtResource("11_wt6go")
font_size = 35
outline_size = 10
outline_color = Color(1, 1, 1, 0)

[sub_resource type="Theme" id="Theme_rsdyk"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ken75"]
bg_color = Color(0.17254902, 0.48235294, 0.8980392, 1)
border_color = Color(0.17254902, 0.48235294, 0.8980392, 1)
border_blend = true
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qqttp"]
bg_color = Color(0.17254902, 0.48235294, 0.8980392, 1)
border_blend = true
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8l64r"]
bg_color = Color(0.17254902, 0.48235294, 0.8980392, 1)
border_blend = true
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fiatl"]
bg_color = Color(0.17254902, 0.48235294, 0.8980392, 1)
border_blend = true
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1hgl6"]
bg_color = Color(0.17254902, 0.48235294, 0.8980392, 1)
border_blend = true
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_v23c4"]
bg_color = Color(0.17254902, 0.48235294, 0.8980392, 1)
border_blend = true
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6m5xv"]
bg_color = Color(0.17254902, 0.48235294, 0.8980392, 1)
border_blend = true
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bjwxm"]
bg_color = Color(0.17254902, 0.48235294, 0.8980392, 1)
border_blend = true
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_o1hl6"]
border_blend = true
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_u2hrd"]
bg_color = Color(0.17254902, 0.48235294, 0.8980392, 1)
border_blend = true
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_p2v4k"]

[sub_resource type="AtlasTexture" id="AtlasTexture_bcos8"]
atlas = ExtResource("13_436f3")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_cmsyx"]
atlas = ExtResource("13_436f3")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_feppd"]
atlas = ExtResource("13_436f3")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_aeaoo"]
atlas = ExtResource("13_436f3")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_sps8e"]
atlas = ExtResource("13_436f3")
region = Rect2(256, 0, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_tp5mi"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_bcos8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cmsyx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_feppd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_aeaoo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sps8e")
}],
"loop": true,
"name": &"new_animation",
"speed": 5.0
}]

[node name="MainNode" type="Node"]
script = ExtResource("1_112p8")

[node name="Космос(14)" type="Sprite2D" parent="."]
position = Vector2(700, 450)
scale = Vector2(4.375, 5)
texture = ExtResource("2_0i6v8")
metadata/_edit_lock_ = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_dyurn")
autoplay = true

[node name="sound_button" type="Button" parent="."]
offset_left = 1105.0
offset_top = 120.0
offset_right = 1233.0
offset_bottom = 248.0
theme_override_icons/icon = SubResource("CompressedTexture2D_dyurn")
theme_override_styles/normal = SubResource("StyleBoxFlat_6lh7w")
theme_override_styles/pressed = SubResource("StyleBoxFlat_1hbs0")
theme_override_styles/hover = SubResource("StyleBoxFlat_7x8fr")
theme_override_styles/hover_pressed = SubResource("StyleBoxFlat_2y2sp")
theme_override_styles/disabled = SubResource("StyleBoxFlat_rsdyk")
theme_override_styles/focus = SubResource("StyleBoxFlat_tp5mi")
icon_alignment = 1
expand_icon = true
metadata/_edit_lock_ = true

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[node name="TerrainMap" type="TileMapLayer" parent="."]
position = Vector2(650, 50)
scale = Vector2(0.8, 0.8)
tile_map_data = PackedByteArray("AAAJAAkAAAAEAAkAAAAIAAkAAAABAAkAAAAHAAkAAAABAAkAAAAGAAkAAAABAAkAAAAFAAkAAAAEAAkAAAAEAAkAAAAEAAkAAAADAAkAAAABAAkAAAACAAkAAAABAAkAAAABAAkAAAABAAkAAAAAAAgAAAABAAkAAAAAAAcAAAABAAkAAAAAAAkAAAAEAAkAAAAAAAYAAAABAAkAAAAAAAUAAAAEAAkAAAABAAQAAAABAAkAAAABAAAAAAABAAkAAAAAAAEAAAABAAkAAAAAAAIAAAABAAkAAAAAAAAAAAAEAAkAAAAAAAMAAAABAAkAAAAAAAQAAAAEAAkAAAACAAAAAAABAAkAAAAEAAAAAAAEAAkAAAAEAAEAAAABAAkAAAAEAAIAAAABAAkAAAAEAAMAAAABAAkAAAACAAQAAAABAAkAAAAFAAQAAAAEAAkAAAAEAAQAAAAEAAkAAAADAAQAAAABAAkAAAADAAAAAAABAAkAAAAFAAAAAAAEAAkAAAAGAAAAAAABAAkAAAAHAAAAAAABAAkAAAAIAAAAAAABAAkAAAAJAAAAAAAEAAkAAAAJAAEAAAABAAkAAAAJAAIAAAABAAkAAAAJAAYAAAABAAkAAAAJAAcAAAABAAkAAAAHAAUAAAABAAkAAAAJAAMAAAABAAkAAAAJAAQAAAAEAAkAAAAJAAUAAAAEAAkAAAAJAAgAAAABAAkAAAAFAAcAAAABAAkAAAAFAAYAAAABAAkAAAAFAAUAAAAEAAkAAAAFAAgAAAABAAkAAAAEAAUAAAAEAAkAAAAIAAUAAAABAAkAAAAGAAUAAAABAAkAAAAEAP//AAAFAAkAAAAFAP//AAAEAAkAAAAFAP7/AAAEAAkAAAAEAP7/AAAFAAkAAAADAP//AAAEAAkAAAADAP7/AAAEAAkAAAAEAP3/AAAEAAkAAAAFAP3/AAAEAAkAAAADAP3/AAAEAAkAAAABAAEAAAABAAkAAAACAAEAAAABAAkAAAADAAEAAAABAAkAAAADAAIAAAABAAkAAAACAAIAAAABAAkAAAABAAIAAAABAAkAAAABAAMAAAABAAkAAAACAAMAAAABAAkAAAADAAMAAAABAAkAAAAGAP//AAAFAAkAAAAGAP7/AAAFAAkAAAAGAP3/AAAFAAkAAAA=")
tile_set = SubResource("TileSet_l6pdb")
metadata/_edit_lock_ = true

[node name="ObjectMap" type="TileMapLayer" parent="."]
position = Vector2(650, 35)
scale = Vector2(0.8, 0.8)
tile_map_data = PackedByteArray("AAADAAQAAAAAAAAAAAABAAQAAAAAAAoAAAACAAMAAQAAAAAAAAA=")
tile_set = SubResource("TileSet_feppd")
metadata/_edit_lock_ = true

[node name="BorderMap" type="TileMapLayer" parent="."]
position = Vector2(650, 50)
scale = Vector2(0.8, 0.8)
tile_map_data = PackedByteArray("AAAEAAQAAAAAAA4AAAAFAAUAAAABABAAAAAEAAMAAAAAAA0AAAAEAAUAAAAAABAAAAAFAAQAAAABAA4AAAAFAAMAAAABAA0AAAA=")
tile_set = SubResource("TileSet_bcos8")
metadata/_edit_lock_ = true

[node name="Playerr4" parent="." instance=ExtResource("12_436f3")]
position = Vector2(-200, 400)
scale = Vector2(0.7, 0.7)
metadata/_edit_lock_ = true

[node name="Playerr3" parent="." instance=ExtResource("12_436f3")]
position = Vector2(-200, 300)
scale = Vector2(0.7, 0.7)
metadata/_edit_lock_ = true

[node name="Playerr2" parent="." instance=ExtResource("12_436f3")]
position = Vector2(-200, 200)
scale = Vector2(0.7, 0.7)
metadata/_edit_lock_ = true

[node name="Enemy" parent="." instance=ExtResource("8_l6pdb")]
position = Vector2(-200, 0)
scale = Vector2(0.7, 0.7)
metadata/_edit_lock_ = true

[node name="Playerr" parent="." instance=ExtResource("12_436f3")]
position = Vector2(-200, 100)
scale = Vector2(0.7, 0.7)
metadata/_edit_lock_ = true

[node name="HP" parent="." instance=ExtResource("9_r657h")]
position = Vector2(52, 42)
scale = Vector2(1.5, 1.5)
metadata/_edit_lock_ = true

[node name="Button2" type="Button" parent="."]
visible = false
offset_left = 281.0
offset_top = 242.0
offset_right = 1112.0
offset_bottom = 661.0
theme_override_font_sizes/font_size = 100
text = "Красава Можем повторить)"
autowrap_mode = 2
metadata/_edit_lock_ = true

[node name="Button" type="Button" parent="."]
visible = false
offset_left = 361.0
offset_top = 302.0
offset_right = 1043.0
offset_bottom = 625.0
theme_override_font_sizes/font_size = 100
text = "Слился? жми сюды"
autowrap_mode = 2
metadata/_edit_lock_ = true

[node name="Label" type="Label" parent="."]
visible = false
offset_left = 585.0
offset_top = -6.0
offset_right = 813.0
offset_bottom = 52.0
theme_override_font_sizes/font_size = 42
text = "Бот топает"
metadata/_edit_lock_ = true

[node name="PanelContainer" type="PanelContainer" parent="."]
visible = false
offset_left = 258.0
offset_top = 89.0
offset_right = 1009.0
offset_bottom = 842.0
theme_override_styles/panel = SubResource("StyleBoxFlat_dyurn")

[node name="BoxContainer" type="BoxContainer" parent="PanelContainer"]
self_modulate = Color(0, 0, 0, 1)
clip_children = 1
layout_mode = 2
size_flags_stretch_ratio = 0.0
theme = SubResource("Theme_6lh7w")
vertical = true

[node name="Control" type="Control" parent="PanelContainer/BoxContainer"]
material = SubResource("CanvasItemMaterial_1hbs0")
custom_minimum_size = Vector2(0, 200)
layout_mode = 2
size_flags_stretch_ratio = 0.0

[node name="70x70" type="Sprite2D" parent="PanelContainer/BoxContainer/Control"]
position = Vector2(374, 100)
scale = Vector2(4.3285713, 1.9714291)
texture = ExtResource("8_0i6v8")

[node name="Control3" type="Control" parent="PanelContainer/BoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
size_flags_vertical = 8
theme = SubResource("Theme_7x8fr")

[node name="head" type="Label" parent="PanelContainer/BoxContainer/Control3"]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = 4.0
offset_bottom = 2.0
theme_override_fonts/font = ExtResource("10_jfkdj")
text = "INHERIT"
label_settings = SubResource("LabelSettings_2y2sp")
horizontal_alignment = 1
vertical_alignment = 1

[node name="bodyText" type="RichTextLabel" parent="PanelContainer/BoxContainer/Control3"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 4.26
offset_top = 65.0
offset_bottom = -1.5258789e-05
theme_override_fonts/mono_font = ExtResource("10_jfkdj")
theme_override_font_sizes/mono_font_size = 16
text = "inheritinheritinheritinheritinherit
inheritinheritinheritinheritinherit
inheritinheritinheritinheritinherit"
fit_content = true

[node name="Control2" type="Control" parent="PanelContainer/BoxContainer"]
layout_mode = 2

[node name="Button" type="Button" parent="PanelContainer/BoxContainer/Control2"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
offset_top = 160.0
offset_bottom = 260.0
theme = SubResource("Theme_rsdyk")
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_disabled_color = Color(0, 0, 0, 0.5019608)
theme_override_fonts/font = ExtResource("11_wt6go")
theme_override_font_sizes/font_size = 16
theme_override_styles/normal = SubResource("StyleBoxFlat_ken75")
theme_override_styles/hover = SubResource("StyleBoxFlat_qqttp")
theme_override_styles/hover_pressed = SubResource("StyleBoxFlat_8l64r")
theme_override_styles/disabled = SubResource("StyleBoxFlat_fiatl")
theme_override_styles/focus = SubResource("StyleBoxFlat_1hgl6")
autowrap_mode = 1

[node name="Button2" type="Button" parent="PanelContainer/BoxContainer/Control2"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
offset_top = 270.0
offset_bottom = 370.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("11_wt6go")
theme_override_font_sizes/font_size = 16
theme_override_styles/normal = SubResource("StyleBoxFlat_v23c4")
theme_override_styles/pressed = SubResource("StyleBoxFlat_6m5xv")
theme_override_styles/hover = SubResource("StyleBoxFlat_bjwxm")
theme_override_styles/hover_pressed = SubResource("StyleBoxFlat_o1hl6")
theme_override_styles/focus = SubResource("StyleBoxFlat_u2hrd")
autowrap_mode = 1

[node name="Button3" type="Button" parent="PanelContainer/BoxContainer/Control2"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
offset_top = 380.0
offset_bottom = 480.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("11_wt6go")
theme_override_font_sizes/font_size = 16
theme_override_styles/normal = SubResource("StyleBoxFlat_v23c4")
theme_override_styles/pressed = SubResource("StyleBoxFlat_6m5xv")
theme_override_styles/hover = SubResource("StyleBoxFlat_bjwxm")
theme_override_styles/hover_pressed = SubResource("StyleBoxFlat_o1hl6")
theme_override_styles/focus = SubResource("StyleBoxFlat_u2hrd")
autowrap_mode = 1

[node name="rezult" type="PanelContainer" parent="."]
visible = false
offset_left = 258.0
offset_top = 89.0
offset_right = 1009.0
offset_bottom = 842.0
theme_override_styles/panel = SubResource("StyleBoxFlat_dyurn")

[node name="BoxContainer" type="BoxContainer" parent="rezult"]
self_modulate = Color(0, 0, 0, 1)
clip_children = 1
layout_mode = 2
size_flags_stretch_ratio = 0.0
theme = SubResource("Theme_6lh7w")
vertical = true

[node name="Control" type="Control" parent="rezult/BoxContainer"]
material = SubResource("CanvasItemMaterial_1hbs0")
custom_minimum_size = Vector2(0, 200)
layout_mode = 2
size_flags_stretch_ratio = 0.0

[node name="70x70" type="Sprite2D" parent="rezult/BoxContainer/Control"]
position = Vector2(374, 100)
scale = Vector2(4.3285713, 1.9714291)
texture = ExtResource("8_0i6v8")

[node name="Control3" type="Control" parent="rezult/BoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
size_flags_vertical = 8
theme = SubResource("Theme_7x8fr")

[node name="bodyText" type="RichTextLabel" parent="rezult/BoxContainer/Control3"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 4.26
offset_top = 65.0
offset_bottom = -1.5258789e-05
theme_override_fonts/mono_font = ExtResource("10_jfkdj")
theme_override_font_sizes/mono_font_size = 16
text = "inheritinheritinheritinheritinherit
inheritinheritinheritinheritinherit
inheritinheritinheritinheritinherit"
fit_content = true

[node name="Control2" type="Control" parent="rezult/BoxContainer"]
layout_mode = 2

[node name="Button_rez" type="Button" parent="rezult/BoxContainer/Control2"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
offset_top = 160.0
offset_bottom = 260.0
theme = SubResource("Theme_rsdyk")
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_disabled_color = Color(0, 0, 0, 0.5019608)
theme_override_fonts/font = ExtResource("11_wt6go")
theme_override_font_sizes/font_size = 14
theme_override_styles/normal = SubResource("StyleBoxFlat_ken75")
theme_override_styles/hover = SubResource("StyleBoxFlat_qqttp")
theme_override_styles/hover_pressed = SubResource("StyleBoxFlat_8l64r")
theme_override_styles/disabled = SubResource("StyleBoxFlat_fiatl")
theme_override_styles/focus = SubResource("StyleBoxFlat_1hgl6")
autowrap_mode = 1

[node name="obuch" type="PanelContainer" parent="."]
visible = false
offset_left = 258.0
offset_top = 89.0
offset_right = 1009.0
offset_bottom = 842.0
theme_override_styles/panel = SubResource("StyleBoxFlat_dyurn")

[node name="BoxContainer" type="BoxContainer" parent="obuch"]
self_modulate = Color(0, 0, 0, 1)
clip_children = 1
layout_mode = 2
size_flags_stretch_ratio = 0.0
theme = SubResource("Theme_6lh7w")
vertical = true

[node name="Control3" type="Control" parent="obuch/BoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
size_flags_vertical = 8
theme = SubResource("Theme_7x8fr")

[node name="head2" type="Label" parent="obuch/BoxContainer/Control3"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.4
anchor_right = 1.0
anchor_bottom = 1.2600001
offset_bottom = -18.000004
theme_override_fonts/font = ExtResource("10_jfkdj")
theme_override_font_sizes/font_size = 25
text = "INHERIT"
label_settings = SubResource("LabelSettings_2y2sp")
horizontal_alignment = 1
vertical_alignment = 1

[node name="bodyText" type="RichTextLabel" parent="obuch/BoxContainer/Control3"]
layout_mode = 1
anchors_preset = -1
anchor_top = 2.0400002
anchor_right = 1.0
anchor_bottom = 10.040001
offset_left = 2.0
offset_right = 2.0
offset_bottom = -6.1035156e-05
theme_override_constants/line_separation = 3
theme_override_fonts/mono_font = ExtResource("10_jfkdj")
theme_override_font_sizes/normal_font_size = 20
theme_override_font_sizes/mono_font_size = 20
theme_override_styles/focus = SubResource("StyleBoxFlat_p2v4k")
text = "inheritinheritinheritinheritinherit
inheritinheritinheritinheritinherit
inheritinheritinheritinheritinherit"
fit_content = true

[node name="Control2" type="Control" parent="obuch/BoxContainer"]
layout_mode = 2

[node name="Button_obuch" type="Button" parent="obuch/BoxContainer/Control2"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.537
anchor_right = 0.99200004
offset_left = -0.13900757
offset_top = 597.0
offset_right = -14.024048
offset_bottom = 683.0
theme = SubResource("Theme_rsdyk")
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_disabled_color = Color(0, 0, 0, 0.5019608)
theme_override_fonts/font = ExtResource("11_wt6go")
theme_override_font_sizes/font_size = 28
theme_override_styles/normal = SubResource("StyleBoxFlat_ken75")
theme_override_styles/hover = SubResource("StyleBoxFlat_qqttp")
theme_override_styles/hover_pressed = SubResource("StyleBoxFlat_8l64r")
theme_override_styles/disabled = SubResource("StyleBoxFlat_fiatl")
theme_override_styles/focus = SubResource("StyleBoxFlat_1hgl6")
text = "Далее "
autowrap_mode = 1
icon_alignment = 1

[node name="ChevronBigLeftWhite" type="Sprite2D" parent="obuch/BoxContainer/Control2"]
position = Vector2(621, 640)
texture = ExtResource("9_wt6go")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="obuch/BoxContainer"]
position = Vector2(162, 592)
scale = Vector2(3, 3)
sprite_frames = SubResource("SpriteFrames_tp5mi")
animation = &"new_animation"
autoplay = "new_animation"

[connection signal="pressed" from="sound_button" to="." method="_on_sound_button_pressed"]
[connection signal="pressed" from="Button2" to="." method="reset_game"]
[connection signal="pressed" from="Button" to="." method="reset_game"]
[connection signal="pressed" from="PanelContainer/BoxContainer/Control2/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="PanelContainer/BoxContainer/Control2/Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="PanelContainer/BoxContainer/Control2/Button3" to="." method="_on_button_3_pressed"]
[connection signal="pressed" from="rezult/BoxContainer/Control2/Button_rez" to="." method="_on_button_rez_pressed"]
[connection signal="pressed" from="obuch/BoxContainer/Control2/Button_obuch" to="." method="_on_button_obuch_pressed"]
